<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".LoginSignup">
    <ImageView
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/person_circle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:importantForAccessibility="no" />
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/displayNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/singupBtn"
            android:text="@string/signup"
            android:textColor="@color/off_white"
            android:background="@drawable/signup_button"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Signup">

        </Button>
        <Button
            android:layout_marginTop="5dp"
            android:text="@string/login"
            android:textColor="@color/off_white"
            android:background="@drawable/signup_button"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Login">

        </Button>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_marginEnd="2dp"
                android:text="@string/reset_password"
                android:textColor="@color/off_white"
                android:background="@drawable/signup_button"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="ResetPassword" />
            <Button
                android:layout_marginStart="2dp"
                android:text="@string/resend_email_verification"
                android:textColor="@color/off_white"
                android:background="@drawable/signup_button"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="sendEmailVerification"
                tools:ignore="ButtonStyle">

            </Button>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

