<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_medium"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginStart="106sp"
        android:layout_marginEnd="106sp"
        android:background="@drawable/button_3d"
        android:text="@string/Medium"
        app:layout_constraintBottom_toTopOf="@+id/button_hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_easy" />

    <Button
        android:id="@+id/button_easy"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginStart="106sp"
        android:layout_marginTop="200sp"
        android:layout_marginEnd="106sp"
        android:background="@drawable/button_3d"
        android:text="@string/Easy"
        app:layout_constraintBottom_toTopOf="@+id/button_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_hard"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginStart="105sp"
        android:layout_marginEnd="106sp"
        android:layout_marginBottom="200sp"
        android:background="@drawable/button_3d"
        android:text="@string/Hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_medium" />


</androidx.constraintlayout.widget.ConstraintLayout>